--- a/index.html
+++ b/index.html
@@ -18,40 +18,51 @@
             <div class="row">
 
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
+
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
 
             </div>
@@ -60,7 +71,7 @@
             <div class="row">
 
                 <div class="col-xs-12">
-                    <div class="box"></div>
+                    <div class="box">col 12</div>
                 </div>
 
             </div>
@@ -69,15 +80,15 @@
             <div class="row">
 
                 <div class="col-xs-8">
-                    <div class="box"></div>
+                    <div class="box">col 8</div>
                 </div>
 
                 <div class="col-xs-2">
-                    <div class="box"></div>
+                    <div class="box">col 2</div>
                 </div>
 
                 <div class="col-xs-2">
-                    <div class="box"></div>
+                    <div class="box">col 2</div>
                 </div>
             </div>
 
@@ -85,23 +96,23 @@
             <div class="row">
 
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
 
                 <div class="col-xs-2">
-                    <div class="box"></div>
+                    <div class="box">col 2</div>
                 </div>
 
                 <div class="col-xs-2">
-                    <div class="box"></div>
+                    <div class="box">col 2</div>
                 </div>
 
                 <div class="col-xs-6">
-                    <div class="box"></div>
+                    <div class="box">col 6</div>
                 </div>
 
                 <div class="col-xs-1">
-                    <div class="box"></div>
+                    <div class="box">col 1</div>
                 </div>
 
             </div>
@@ -114,19 +125,19 @@
                     <div class="row box">
 
                         <div class="col-xs-2">
-                            <div class="nested"></div>
+                            <div class="box nested">Nested col 2</div>
                         </div>
 
                         <div class="col-xs-2">
-                            <div class="nested"></div>
+                            <div class="box nested">Nested col 2</div>
                         </div>
 
                         <div class="col-xs-8">
-                            <div class="nested"></div>
+                            <div class="box nested">Nested col 8</div>
                         </div>
 
                     </div>
-                    
+
                 </div>
 
                 <div class="col-xs-6">
@@ -134,11 +145,11 @@
                     <div class="row box">
 
                         <div class="col-xs-6">
-                            <div class="nested"></div>
+                            <div class="box nested">Nested col 6</div>
                         </div>
 
                         <div class="col-xs-6">
-                            <div class="nested"></div>
+                            <div class="box nested">Nested col 6</div>
                         </div>
 
                     </div>
