--- a/index.html
+++ b/index.html
@@ -14,54 +14,54 @@
         
         <div class="container-fluid">
 
-            <!-- riga: col 1 x 12 -->
+            <!-- riga: col 1 x 12 (varie grandezze in schermo > 1200px)-->
             <div class="row">
-
-                <div class="col-xs-1">
+                
+                <div class="col-xs-1 col-xl-1">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-10">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-1">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-6">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-6">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-4">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-4">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-4">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-3">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-3">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-3">
                     <div class="box">col 1</div>
                 </div>
 
-                <div class="col-xs-1">
+                <div class="col-xs-1 col-xl-3">
                     <div class="box">col 1</div>
                 </div>
 
@@ -79,15 +79,15 @@
             <!-- riga: col 8 x 1, col 2 x 2 -->
             <div class="row">
 
-                <div class="col-xs-8">
+                <div class="col-xs-8 col-xl-2">
                     <div class="box">col 8</div>
                 </div>
 
-                <div class="col-xs-2">
+                <div class="col-xs-2 col-xl-8">
                     <div class="box">col 2</div>
                 </div>
 
-                <div class="col-xs-2">
+                <div class="col-xs-2 col-xl-2">
                     <div class="box">col 2</div>
                 </div>
             </div>
@@ -145,7 +145,9 @@
                     <div class="row box">
 
                         <div class="col-xs-6">
+
                             <div class="box nested">Nested col 6</div>
+
                         </div>
 
                         <div class="col-xs-6">
@@ -153,10 +155,14 @@
                         </div>
 
                     </div>
+
                 </div>
+
             </div>
 
-        </section>
+        </div>
+
+    </section>
 
 </body>
 </html>
