--- a/bonus/index.html
+++ b/bonus/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epilepsy27</title>
+    <title>27</title>
     <link rel="stylesheet" href="27bool.css">
     <link rel="stylesheet" href="style.css">
 </head>
